--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: based_battery_indicator
-description: A new Flutter package project.
-version: 0.0.1
-homepage:
+description: A Based Battery Indicator Widget, Which Helps You Create A Battery Indicator With A iOS-Like Battery Indicator
+version: 1.0.0
+homepage: https://github.com/Cierra-Runis/based_battery_indicator
 
 environment:
   sdk: '>=3.0.5 <4.0.0'
